--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -64,6 +64,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
 		<!-- Lombok (works fully with annotation processing) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
