Final updated changes – 05 Dec

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.application.name=backend
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# Cloudinary Configuration
+cloudinary.cloud-name=dwbo5crpf
+cloudinary.api-key=468853823652424
+cloudinary.api-secret=fNYmSeZC3FsRS1NamE_2hdD88rE
