--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -70,6 +70,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.36.0</version>
+		</dependency>
+
 
 		<!-- Lombok (works fully with annotation processing) -->
 		<dependency>
